# lyrics-search

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  init_utils.py  music-explorer-build-plan.md  pyproject.toml  requirements.txt  song_text.ipynb  test.ipynb  test.json
app/: __init__.py  main.py  models.py  router.py
app/api/: __init__.py  deps.py  main.py
app/api/routes/: __init__.py  chat.py  library.py  search.py
app/domain/: __init__.py  models.py
app/existing/: __init__.py  folder_processor.py  qdrant_db.py
app/resources/: __init__.py  db_client.py  model_registry.py
app/services/: __init__.py  library_service.py  llm_client.py  search_service.py
file_processor/: __init__.py  main.py  utils.py
frontend/: index.html
frontend_template/: MusiX Standalone.html  MusiX.html
frontend_template/components/: ChatSection.jsx  RecommendSection.jsx  Sidebar.jsx  StatsSection.jsx
notebooks/: similar_music.ipynb  song_text.ipynb
search_engine/: __init__.py  main.py  utils.py
