[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-explorer"
version = "0.1.0"
description = "Music Explorer - semantic music search platform"
requires-python = ">=3.11"
authors = [{ name = "Music Explorer Team" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "numpy>=1.24",
    "mutagen>=1.47",
    "lyricsgenius>=3.3",
    "tqdm>=4.66",
    "anthropic>=0.40",
    "python-multipart>=0.0.12",
]